# quizgpt

./: .env.example  API.side  README.md  db.sqlite3  manage.py  pyproject.toml  quizgpt.side  requirements.txt
chatapi/: api.py  urls.py  views.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
openai/: urls.py
paper/: models.py  views.py
paper/migrations/: 0001_initial.py
paper/templates/: paper_question_reorder.html
quizdata/: admin.py  api.py  apps.py  forms.py  models.py  schema.py  tags.py  urls.py  views.py
quizdata/migrations/: 0001_initial.py  0002_alter_questionbucket_options.py  0002_alter_topic_slug.py  0002_rename_topic_topic_topic_text_and_more.py  0003_alter_topic_slug.py  0003_questionbucket_review_date_and_more.py  0004_alter_topic_slug_alter_topic_subtopic.py  0004_alter_topic_topic_level.py  0005_alter_choice_options_remove_choice_slug_and_more.py  0006_alter_question_force_ordered_and_more.py  0007_choice_is_correct_topic_topic_level.py  0008_alter_choice_choice_order.py  0009_alter_choice_choice_order.py  0010_topic_user_alter_topic_topic_level.py  0011_rename_user_topic_owner_topic_is_hidden.py  0012_topic_description_alter_question_question_text_and_more.py  0013_choiceanswer_choice_answers.py  0014_alter_choice_options_alter_choiceanswer_options_and_more.py  0015_alter_choiceanswer_options_remove_choice_answers_and_more.py
quizdata/templates/quizdata/: base.html  question_detail.html  question_list.html  questionbucket_detail.html  questionbucket_list.html  search.html  topic_detail.html  topic_list.html
quizdata/templates/quizdata/includes/: question_detail.html  submit_answer.html
quizgpt/: api.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
quizgpt/templatetags/: tags.py
templates/: base.html  nav.html  signup.html
templates/hello/: hello.html
templates/registration/: logged_out.html  login.html  password_reset_confirm.html
